--- a/index.html
+++ b/index.html
@@ -27,16 +27,20 @@
         <form action="">
           <input type="text" name="" id="" placeholder="Email ou telefone" />
           <input type="password" name="" id="" placeholder="Senha" />
-          <button type="submit">Entrar</button>
+          <button type="submit" class="login-btn">Entrar</button>
         </form>
-        <p><a href="">Esqueceu a senha</a></p>
+        <p class="forgot-password"><a href="">Esqueceu a senha?</a></p>
         <hr />
-        <button type="submit">Criar nova conta</button>
-        <p>
-          <b>Crie uma Página</b>para uma celebridade, uma marca ou uma empresa.
-        </p>
+        <button type="submit" class="create-account-btn">
+          Criar nova conta
+        </button>
       </div>
     </main>
+
+    <section>
+        <p><b>Crie uma Página </b>para uma celebridade, uma marca ou uma empresa.</p>
+    </section>
+
     <footer>
       <ul>
         <li>Português (Brasil)</li>
