--- a/index.html
+++ b/index.html
@@ -13,42 +13,52 @@
     <title>Facebook Login Page</title>
   </head>
   <body>
-    <header>
-      <div class="facebook-logo-ctn">
-        <img src="/img/facebook-logo.svg" alt="Facebook Logo" />
-      </div>
-      <p>
-        O Facebook ajuda você a se conectar e compartilhar com as pessoas que
-        fazem parte da sua vida.
-      </p>
-    </header>
-    <main>
-      <div class="main-ctn">
-        <form action="">
-          <input type="text" name="" id="" placeholder="Email ou telefone" />
-          <input type="password" name="" id="" placeholder="Senha" />
-          <button type="submit" class="login-btn">Entrar</button>
-        </form>
-        <p class="forgot-password"><a href="">Esqueceu a senha?</a></p>
-        <hr />
-        <button type="submit" class="create-account-btn">
-          Criar nova conta
-        </button>
-      </div>
-    </main>
-
+    <div class="flex-media-900px">
+      <header>
+        <div class="facebook-logo-ctn">
+          <img src="/img/facebook-logo.svg" alt="Facebook Logo" />
+        </div>
+        <p>
+          O Facebook ajuda você a se conectar e compartilhar com as pessoas que
+          fazem parte da sua vida.
+        </p>
+      </header>
+      <main>
+        <div class="main-ctn">
+          <form action="">
+            <input type="text" name="" id="" placeholder="Email ou telefone" />
+            <input type="password" name="" id="" placeholder="Senha" />
+            <button type="submit" class="login-btn">Entrar</button>
+          </form>
+          <p class="forgot-password">
+            <a href="" class="forgot-password-link">Esqueceu a senha?</a>
+          </p>
+          <hr />
+          <button type="submit" class="create-account-btn">
+            Criar nova conta
+          </button>
+          <section>
+            <p>
+              <b>Crie uma Página </b>para uma celebridade, uma marca ou uma empresa.
+            </p>
+          </section>
+        </div>
+      </main>
+    </div>
     <section>
-        <p><b>Crie uma Página </b>para uma celebridade, uma marca ou uma empresa.</p>
+      <p>
+        <b>Crie uma Página </b>para uma celebridade, uma marca ou uma empresa.
+      </p>
     </section>
 
     <footer>
       <ul>
-        <li>Português (Brasil)</li>
-        <li>English (US)</li>
-        <li>Español</li>
-        <li>Français (France)</li>
-        <li>Italiano</li>
-        <li>Deutsch</li>
+        <li><a href="">Português (Brasil)</a></li>
+        <li><a href="">English(US)</a></li>
+        <li><a href="">Español</a></li>
+        <li><a href="">Français (France)</a></li>
+        <li><a href="">Italiano</a></li>
+        <li><a href="">Deutsch</a></li>
       </ul>
     </footer>
   </body>
