creating tablet and desktop version

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             Criar nova conta
           </button>
           <section>
-            <p>
+            <p class="creat-new-accont-text-one">
               <b>Crie uma Página </b>para uma celebridade, uma marca ou uma empresa.
             </p>
           </section>
@@ -46,7 +46,7 @@
       </main>
     </div>
     <section>
-      <p>
+      <p class="creat-new-accont-text-two">
         <b>Crie uma Página </b>para uma celebridade, uma marca ou uma empresa.
       </p>
     </section>
